aligned the signup btn fixed remaining bug on lesson PUT and realigned Course Lesson List position

--- a/src/components/courses/CourseEdit.css
+++ b/src/components/courses/CourseEdit.css
@@ -1,3 +1,8 @@
 a.btn.btn-light {
   margin-top: 10px;
 }
+
+ul.d-flex.flex-column.bd-highlight {
+  position: relative;
+  right: 40px;
+}
